テスト実行時にログを表示

--- a/matsuda/app/build.gradle
+++ b/matsuda/app/build.gradle
@@ -36,3 +36,10 @@ compileJava {
 compileTestJava {
     options.encoding = 'UTF-8'
 }
+
+test {
+    testLogging {
+        events 'started', 'skipped', 'passed', 'failed'
+        exceptionFormat 'full'
+    }
+}
